feat: add fat jar